--- a/rakefile
+++ b/rakefile
@@ -1,10 +1,12 @@
-require "minitest/test_task"
+# frozen_string_literal: true
+
+require 'minitest/test_task'
 
 Minitest::TestTask.create(:test) do |t|
-  t.libs << "spec"
-  t.libs << "lib"
+  t.libs << 'spec'
+  t.libs << 'lib'
   t.warning = false
-  t.test_globs = ["spec/**/*_spec.rb"]
+  t.test_globs = ['spec/**/*_spec.rb']
 end
 
 task :test
