--- a/.gitignore
+++ b/.gitignore
@@ -54,9 +54,14 @@ build-iPhoneSimulator/
 
 /coverage
 
-/test/*
+/test/
 
 /tmp/
+
+/test
+
+/.vscode/
+/.ruby-lsp/
 
 # Used by RuboCop. Remote config files pulled in from inherit_from directive.
 # .rubocop-https?--*
